Fixed spacing between photo rows on game section

--- a/assets/css/argon-design-system.css
+++ b/assets/css/argon-design-system.css
@@ -24329,3 +24329,7 @@ pre>code.highlight {
 }
 
 /*# sourceMappingURL=kit-free.css.map */
+
+.game-section-row {
+  margin-bottom: 4em;
+}
